503_from_envoy/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 10002
static_resources:
  listeners:
  - name: client_proxy
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http_self
          # common_http_protocol_options:
          #   idle_timeout: 0.3s
          route_config:
            name: local_route_in
            virtual_hosts:
            - name: self_other
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: target_proxy_cluster
          http_filters:
          - name: http.router
            typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  - name: target_proxy
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 10001
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          common_http_protocol_options:
            idle_timeout: 0.5s
          route_config:
            name: local_route_out
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  host_rewrite_literal: www.google.com
                  cluster: service_google
          http_filters:
          - name: http.router
            typed_config:
               "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
  - name: target_proxy_cluster
    connect_timeout: 1s
    # common_http_protocol_options:
    #   idle_timeout: 0.3s
    type: STATIC
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: target_proxy_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 10001
  - name: service_google
    connect_timeout: 1s
    type: STRICT_DNS
    # Comment out the following line to test on v6 networks
    dns_lookup_family: V4_ONLY
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: service_google
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.google.com
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.transport_sockets.tls.v3.UpstreamTlsContext
        sni: www.google.com
